# Programmiersprachen

programmiersprachen-aufgabe-1/: Glossar.txt
programmiersprachen-aufgabe-1/source/: CMakeLists.txt  aufgabe-1-3.cpp  aufgabe-1-4.cpp  aufgabe-1-5.cpp  aufgabe-1-6.cpp  aufgabe-1-7.cpp  mile_to_kilometer.cpp  tests.cpp
programmiersprachen-aufgabenblatt-2/source/: CMakeLists.txt  circle.cpp  circle.hpp  color.hpp  example.cpp  mat2.cpp  mat2.hpp  rectangle.cpp  rectangle.hpp  tests.cpp  vec2.cpp  vec2.hpp  window.hpp
programmiersprachen-aufgabenblatt-3/: Aufgabe-3-1.txt
programmiersprachen-aufgabenblatt-3/source/: CMakeLists.txt  aufgabe-3-10.cpp  aufgabe-3-11.cpp  aufgabe-3-12.cpp  aufgabe-3-13.cpp  aufgabe-3-14.cpp  aufgabe-3-2.cpp  aufgabe-3-4.cpp  aufgabe-3-5.txt  aufgabe-3-6.cpp  aufgabe-3-7.cpp  aufgabe-3-8.cpp  aufgabe-3-9.cpp  circle.cpp  circle.hpp  clock.cpp  color.hpp  example.cpp  mat2.cpp  tests.cpp
programmiersprachen-aufgabenblatt-4/source/: CMakeLists.txt  List.hpp  circle.cpp  circle.hpp  color.hpp  tests.cpp  vec2.cpp
