#add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

#add_executable(tests tests.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)

add_executable(aufgabe-1-3 aufgabe-1-3.cpp)
#add_executable(aufgabe-1-4 aufgabe-1-4.cpp)
add_executable(aufgabe-1-5 aufgabe-1-5.cpp)
add_executable(aufgabe-1-6 aufgabe-1-6.cpp)
add_executable(aufgabe-1-7 aufgabe-1-7.cpp)
add_executable(tests tests.cpp)