# Build Aufgabe 3-2
add_executable(aufgabe-3-2
  aufgabe-3-2.cpp
  )

# Build Aufgabe 3-4
add_executable(aufgabe-3-4
  color.hpp
  vec2.cpp
  circle.cpp
  aufgabe-3-4.cpp
  )

# Build Aufgabe 3-6
add_executable(aufgabe-3-6
  color.hpp
  vec2.cpp
  circle.cpp
  aufgabe-3-6.cpp
  )

# Build Aufgabe 3-7
  add_executable(aufgabe-3-7
  color.hpp
  vec2.cpp
  circle.cpp
  aufgabe-3-7.cpp
  )

# Build Aufgabe 3-8
  add_executable(aufgabe-3-8
  color.hpp
  vec2.cpp
  circle.cpp
  aufgabe-3-8.cpp
  )

# Build Aufgabe 3-9
  add_executable(aufgabe-3-9
  aufgabe-3-9.cpp
  )

# Build Aufgabe 3-10
  add_executable(aufgabe-3-10
  aufgabe-3-10.cpp
  )

# Build Aufgabe 3-11
  add_executable(aufgabe-3-11
  aufgabe-3-11.cpp
  )

# Build Aufgabe 3-12
  add_executable(aufgabe-3-12
  aufgabe-3-12.cpp
  )

  # Build Aufgabe 3-13
  add_executable(aufgabe-3-13
  aufgabe-3-13.cpp
  )

# Build Aufgabe 3-14
  add_executable(aufgabe-3-14
  color.hpp
  vec2.cpp
  circle.cpp
  aufgabe-3-14.cpp
  )